test_yuriiq/catalog/language/german/account/voucher.php
<?php

// text
$_['text_account']	= 'Konto';
$_['text_description']	= 'Dieser Gutschein wird an den Empfänger per E-Mail nach Ihrer Bestellung bezahlt ist.';
$_['text_voucher']	= 'Geschenk-Gutschein';
$_['text_agree']	= 'Ich verstehe, dass Geschenkgutscheine sind nicht erstattungsfähig.';
$_['text_for']	= '%s Gift Certificate for %s';
$_['text_message']	= '<p>Thank you for purchasing a gift certificate! Once you have completed your order your gift voucher recipient will be sent an email with details how to redeem their gift voucher.</p>';

// error
$_['error_amount']	= 'Amount must be between %s and %s!';
$_['error_to_name']	= 'Recipient\';
$_['error_theme']	= 'You must select a theme!';
$_['error_email']	= 'E-Mail Address does not appear to be valid!';
$_['error_agree']	= 'Warning: You must agree that the gift certificates are non-refundable!';
$_['error_from_name']	= 'Your Name must be between 1 and 64 characters!';

// entry
$_['entry_from_email']	= 'Your Email:';
$_['entry_from_name']	= 'Your Name:';
$_['entry_to_email']	= 'Recipient\';
$_['entry_to_name']	= 'Recipient\';
$_['entry_amount']	= 'Amount:<br /><span class="help">(Value must be between %s and %s)</span>';
$_['entry_theme']	= 'Gift Certificate Theme:';
$_['entry_message']	= 'Message:<br /><span class="help">(Optional)</span>';

// heading
$_['heading_title']	= 'Kaufen Sie einen Geschenkgutschein';
?>